--- a/app/assets/stylesheets/_icons.sass
+++ b/app/assets/stylesheets/_icons.sass
@@ -9,3 +9,13 @@ i.fa-slack
 
 i.fa-group, i.fa-key, i.fa-lock, i.fa-group, i.fa-exclamation-circle
   clear: both
+
+i.icon-grade
+  /* Same as fa-check */
+  &::before
+    content: "\f00c"
+
+i.icon-submission
+  /* Same as fa-paperclip */
+  &::before
+    content: "\f0c6"
