--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -3,19 +3,19 @@ body
   padding: 0
   position: relative
 
-.inner-wrap 
+.inner-wrap
   margin: 2rem 0
   width: 100%
   position: relative
 
 .outer-wrap
-  padding: 0.1rem 0 
+  padding: 0.1rem 0
 
 .mainContainer
   margin: 0
   float: left
 
-  &.staff 
+  &.staff
     width: calc(100% - 252px)
 
   &.student
@@ -44,12 +44,12 @@ body
   .small-12.medium-2.columns
     margin: 3rem 3rem 0 0
 
-  ul 
-    margin: 0 
+  ul
+    margin: 0
     padding: 0
 
     li
-      margin: 0 
+      margin: 0
       padding: 0
       list-style-type: none
       a
@@ -59,8 +59,8 @@ body
 .pageContainer
   margin: 0 .75rem
   width: calc(100% - 290px)
-  
-  &.staff 
+
+  &.staff
     width: calc(100% - 270px)
 
   &.student
@@ -85,12 +85,12 @@ body
   .small-12.medium-2.columns
     margin: 3rem 3rem 0 0
 
-  ul 
-    margin: 0 
+  ul
+    margin: 0
     padding: 0
 
     li
-      margin: 0 
+      margin: 0
       padding: 0
       list-style-type: none
       a
@@ -122,6 +122,12 @@ body
 
 .no-bullet li
   list-style-type: none
+
+.centered
+  position: absolute
+  left: 50%
+  top: 50%
+  transform: translate(-50%, -50%)
 
 form .tabs-content .content
   min-height: 400px
@@ -158,7 +164,7 @@ a:hover + .display_on_hover
   border-radius: $global-radius
   z-index: 10
 
-  h6 
+  h6
     color: $color-white
     font-weight: bold
 
@@ -166,7 +172,7 @@ a:hover + .display_on_hover
     margin: 0
     padding: 0
 
-    li 
+    li
       color: $color-white
 
       display: block
@@ -209,12 +215,12 @@ a:hover + .display_on_hover
 
     .small-12.medium-2.columns
       width: 100%
-      margin: 1rem 0 
-      padding: 0 1rem 
+      margin: 1rem 0
+      padding: 0 1rem
 
   .student.mainContent
     margin-top: 0
-    
+
   .columns.pageContainer, .columns.outerContainer, .columns.sideBarContainer
     padding-left: 0
     padding-right: 0
