add presigned url expiration notifications to submissions export success mailers

--- a/app/views/exports_mailer/submissions_export_success.html.haml
+++ b/app/views/exports_mailer/submissions_export_success.html.haml
@@ -8,7 +8,7 @@
 %p
 %p{:align => "center"}
   You can download your completed ZIP archive
-  = succeed "." do
+  = succeed ". This link will expire after one week." do
     %a{:href => "#{ @submissions_export.presigned_s3_url }"} here
 
 %p{:align => "center"}
