comments-only rubric grades
    This feature allows criterion grades to have comments without
    associated levels. Grades must still be released for comments
    to be visible. It also clears up an Angular bug which polluted
    the console with error messages.

--- a/app/views/grades/_criterion_grade_results.haml
+++ b/app/views/grades/_criterion_grade_results.haml
@@ -6,7 +6,7 @@
 
       %td.level.heading(colspan="#{presenter.rubric.max_level_count}")
         Level: Points Awarded
-      %td.comments.heading(ng-show="levelsSelected().length > 0")
+      %td.comments.heading
         Comments
 
 
