--- a/app/views/grades/_rubric_edit.html.haml
+++ b/app/views/grades/_rubric_edit.html.haml
@@ -35,7 +35,7 @@
             %label.larger
               %strong Level:
               Points Awarded
-          %td.comments.heading(ng-show="levelsSelected().length > 0")
+          %td.comments.heading(ng-show="selectedLevels().length > 0")
             %label.larger
               Comments
 
@@ -93,4 +93,4 @@
 
     .clear
     .right
-      %button#submit-grade(ng-click="submitGrade()" ng-disabled="selectedLevels().length == 0") Submit Grade
+      %button#submit-grade(ng-click="submitGrade()") Submit Grade
