rich text in rubric feedback
	This feature adds rich text editing in the rubric feedback form
	and diplays on grade show page, similar to grades without rubrics.
	It also removes reassignment of functions in Angular to arrays, to
	allow for multiple calls to gradedRubricParams() without error. This
	will make way for any better error handling on POST failure, and the
	ability to resubmit, which would currently always fail.

--- a/app/views/grades/_criterion_grade_results.haml
+++ b/app/views/grades/_criterion_grade_results.haml
@@ -50,4 +50,4 @@
           %td.filler(colspan="#{presenter.rubric.max_level_count - criterion.levels.size}")
         %td.level.level-comments.comments-box
           - unless comments_by_criterion_id.empty?
-            = comments_by_criterion_id[criterion.id]
+            = raw comments_by_criterion_id[criterion.id]
