--- a/app/views/students/teams.html.haml
+++ b/app/views/students/teams.html.haml
@@ -2,24 +2,25 @@
 
 .pageContent
   = render 'layouts/alerts'
-  
+
   %h4.italic.not_bold
-    - if current_student.team_for_course(current_course).present?
+    - team = current_student.team_for_course(current_course)
+    - if team.present?
       Your #{term_for :team}:
-      = current_student.team_for_course(current_course).name
+      = team.name
 
       – Score:
-      - if current_student.team_for_course(current_course).score.present?
-        = points current_student.team_for_course(current_course).score
-      - else
-        0
+      = points current_student.team_for_course(current_course).score
+      - if team.banner.present?
+        %br
+        %img{:src => team.banner, :height => 200 }
 
     %h4.subtitle= "#{term_for :team} Leaderboard"
     = render "teams/leaderboard"
-    - if current_student.team_for_course(current_course).present?
-      - if current_course.in_team_leaderboard? || current_student.team_for_course(current_course).in_team_leaderboard?
+    - if team.present?
+      - if current_course.in_team_leaderboard? || team.in_team_leaderboard?
         %h4.subtitle= "In-#{term_for :team} Rankings"
-        = render "teams/in_team_rankings"  
+        = render "teams/in_team_rankings"
     - if current_course.challenges.present?
       %h4.subtitle= "#{term_for :challenges }"
       = render "challenges/student_index"
