--- a/app/views/students/teams.html.haml
+++ b/app/views/students/teams.html.haml
@@ -4,23 +4,14 @@
   = render 'layouts/alerts'
 
   %h4.italic.not_bold
-    - team = current_student.team_for_course(current_course)
-    - if team.present?
-      Your #{term_for :team}:
-      = team.name
-
-      – Score:
-      = points current_student.team_for_course(current_course).score
-      - if team.banner.present?
-        %br
-        %img{:src => team.banner, :height => 200 }
-
-    %h4.subtitle= "#{term_for :team} Leaderboard"
     = render "teams/leaderboard"
-    - if team.present?
-      - if current_course.in_team_leaderboard? || team.in_team_leaderboard?
-        %h4.subtitle= "In-#{term_for :team} Rankings"
-        = render "teams/in_team_rankings"
+    - if @team.present?
+      - if current_course.in_team_leaderboard? || @team.in_team_leaderboard?
+        = render "teams/in_team_rankings", team: @team
+
+      %h4.subtitle Your #{term_for :team} (#{@team.name}) has earned #{points @team.score } points
+      - if @team.banner.present?
+        %img.clear{:src => @team.banner, :height => 200 }
+
     - if current_course.challenges.present?
-      %h4.subtitle= "#{term_for :challenges }"
       = render "challenges/student_index"
