--- a/app/views/grades/_group_submission.haml
+++ b/app/views/grades/_group_submission.haml
@@ -14,7 +14,7 @@
     // Late alert if submitted after due date
     - if current_student.submission_for_assignment(@assignment).late?
       %span.label.alert Late!
-      
+
     // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
   - if current_student.submission_for_assignment(@assignment).updated_at != current_student.submission_for_assignment(@assignment).created_at
     %p
@@ -25,7 +25,7 @@
   - if current_student.submission_for_assignment(@assignment).link?
     %p
       Link:
-      = link_to current_student.submission_for_assignment(@assignment).link, current_student.submission_for_assignment(@assignment).link
+      = external_link_to current_student.submission_for_assignment(@assignment).link, current_student.submission_for_assignment(@assignment).link
 
   - if current_student.submission_for_assignment(@assignment).submission_files.present?
     %p
@@ -67,7 +67,7 @@
   - if @group.submission_for_assignment(@assignment).link?
     %p
       %b Link:
-      = link_to @group.submission_for_assignment(@assignment).link, @group.submission_for_assignment(@assignment).link
+      = external_link_to @group.submission_for_assignment(@assignment).link, @group.submission_for_assignment(@assignment).link
 
   - if @group.submission_for_assignment(@assignment).submission_files.present?
     %p
