--- a/app/views/submissions/_student_show.haml
+++ b/app/views/submissions/_student_show.haml
@@ -27,7 +27,7 @@
   - if presenter.submission_for_assignment(current_student).link?
     %p
       %span.smallcaps Link:
-      = link_to presenter.submission_for_assignment(current_student).link
+      = external_link_to presenter.submission_for_assignment(current_student).link
 
   - if presenter.submission_for_assignment(current_student).submission_files.present?
     %p
@@ -66,7 +66,7 @@
   - if presenter.group_submission_for(current_student).link?
     %p
       %span.smallcaps Link:
-      = link_to presenter.group_submission_for(current_student).link
+      = external_link_to presenter.group_submission_for(current_student).link
 
   - if presenter.group_submission_for(current_student).submission_files.present?
     %p
