--- a/app/views/grades/_submission.haml
+++ b/app/views/grades/_submission.haml
@@ -38,7 +38,7 @@
   - if current_student.submission_for_assignment(@assignment).text_comment?
     %p
       %span.smallcaps Statement:
-      = raw current_student.submission_for_assignment(@assignment).text_comment
+      = raw sanitize_external_links current_student.submission_for_assignment(@assignment).text_comment
 
 
 - else
@@ -80,4 +80,4 @@
   - if @group.submission_for_assignment(@assignment).text_comment?
     %p
       %span.smallcaps Statement:
-      = raw @group.submission_for_assignment(@assignment).text_comment
+      = raw sanitize_external_links @group.submission_for_assignment(@assignment).text_comment
