--- a/app/views/info/ungraded_submissions.html.haml
+++ b/app/views/info/ungraded_submissions.html.haml
@@ -32,7 +32,7 @@
             - elsif submission.assignment.has_groups?
               = link_to submission.group.try(:name), group_path(submission.group)
           %td= submission.submitted_at
-          %td= raw submission.text_comment
+          %td= raw sanitize_external_links submission.text_comment
           - if current_course.has_teams?
             %td
               - if current_course.has_teams? && submission.assignment.is_individual? && submission.student.present? && submission.student.team_for_course(current_course).present?
