--- a/app/views/submissions/_student_show.haml
+++ b/app/views/submissions/_student_show.haml
@@ -41,7 +41,7 @@
   - if presenter.submission_for_assignment(current_student).text_comment?
     %p
       %span.smallcaps Content/Statement:
-      = raw presenter.submission_for_assignment(current_student).text_comment
+      = raw sanitize_external_links presenter.submission_for_assignment(current_student).text_comment
 
 - else
   // link to edit the submission
@@ -86,4 +86,4 @@
   - if presenter.group_submission_for(current_student).text_comment?
     %p
       %span.smallcaps Statement:
-      = raw presenter.group_submission_for(current_student).text_comment
+      = raw sanitize_external_links presenter.group_submission_for(current_student).text_comment
