--- a/app/views/students/syllabus/_assignments.haml
+++ b/app/views/students/syllabus/_assignments.haml
@@ -98,7 +98,10 @@
                       - else
                         - if assignment.accepts_submissions? && assignment.is_unlocked_for_student?(current_student)
                           - if student_submission.present?
-                            %li= link_to raw("<i class='fa fa-file-o fa-fw'></i> See Submission"), assignment_path(assignment, :anchor => "tab3"), :class => 'button'
+                            - if current_user_is_student?
+                              %li= link_to raw("<i class='fa fa-file-o fa-fw'></i> See Submission"), assignment_path(assignment, :anchor => "tab3"), :class => 'button'
+                            - else
+                              %li= link_to raw("<i class='fa fa-file-o fa-fw'></i> See Submission"), assignment_submission_path(assignment, student_submission.id), :class => 'button'
                           - elsif assignment.open?
                             %li= link_to raw("<i class='fa fa-upload fa-fw'></i> Submit"), new_assignment_submission_path(assignment, :student_id => @student), :class => 'button'
                       - if current_user_is_staff?
