CSS for staff sidebar badges with fake data

--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -70,6 +70,19 @@
       color: $color-white
       font-weight: normal
 
+    span.sidebar-nav
+      display: block
+      padding: 2.4px
+
+    .staff-notification-badge
+      background-color: $color-orange-1
+      color: $color-white
+      padding: .15rem .5rem
+      position: relative
+      top: -27px
+      margin: 0
+      left: 0px
+
   /* Spacing the list divider */
   hr
     margin: .75rem auto
