remove some extraneous odd-merged predictor code/specs, remove open4 background services library from gemfile, minor text change in earned badges mailer

--- a/app/views/notification_mailer/earned_badge_awarded.text.haml
+++ b/app/views/notification_mailer/earned_badge_awarded.text.haml
@@ -5,4 +5,4 @@ Check out what other #{ @course.badge_term.pluralize } you can earn in #{ @cours
 https://www.gradecraft.com/my_badges
 
 Fondly,
-GradeCraft
+The GradeCraft Team
