Use helpers within the subnav for staff

--- a/app/views/layouts/navigation/_staff_subnav_links.haml
+++ b/app/views/layouts/navigation/_staff_subnav_links.haml
@@ -18,18 +18,24 @@
 %li
   = link_to_unless_current raw('<i class="fa fa-list-ol fa-fw"></i> Leaderboard'), leaderboard_path
 %li
+  - grading_status_count = grading_status_count_for(current_course)
   = link_to_unless_current raw('<i class="fa fa-flag-checkered fa-fw"></i> Grading Status'), grading_status_path do |name|
     = raw("<span class='sidebar-nav'>#{name}</span>")
-  %div.notification-badge.staff-notification-badge 123
+  - if grading_status_count > 0
+    %div.notification-badge.staff-notification-badge= grading_status_count
 %li
+  - resubmission_count = resubmission_count_for(current_course)
   = link_to_unless_current raw('<i class="fa fa-history fa-fw"></i> Resubmissions'), resubmissions_path do |name|
     = raw("<span class='sidebar-nav'>#{name}</span>")
 
-  %div.notification-badge.staff-notification-badge 12
+  - if resubmission_count > 0
+    %div.notification-badge.staff-notification-badge= resubmission_count
 %li
+  - ungraded_submissions_count = ungraded_submissions_count_for(current_course)
   = link_to_unless_current raw('<i class="fa fa-exclamation-triangle fa-fw"></i> Ungraded Submissions'), ungraded_submissions_path do |name|
     = raw("<span class='sidebar-nav'>#{name}</span>")
-  %div.notification-badge.staff-notification-badge 6
+  - if ungraded_submissions_count > 0
+    %div.notification-badge.staff-notification-badge= ungraded_submissions_count
 
 - if current_course.student_weighted?
   %li= link_to_unless_current raw("<i class='fa fa-cubes fa-fw'></i> #{term_for :weight} Choices"), multiplier_choices_path
