Replace controller instance variables with the helper methods

--- a/app/views/info/_in_progress_grades_table.haml
+++ b/app/views/info/_in_progress_grades_table.haml
@@ -1,6 +1,6 @@
 %h4.subtitle#inProgressTableCaption
   = "In Progress Grades"
-  %span.label.alert= @count_in_progress
+  %span.label.alert= in_progress_grades_count_for(course)
 
 - @in_progress_grades_by_assignment.each do |assignment, grades|
   .assignment-in-progress
