--- a/app/views/info/ungraded_submissions.html.haml
+++ b/app/views/info/ungraded_submissions.html.haml
@@ -5,7 +5,7 @@
 .pageContent
   = render 'layouts/alerts'
 
-  %span.label.alert= "You have #{@count_ungraded} ungraded #{term_for :assignments}"
+  %span.label.alert= "You have #{ungraded_submissions_count_for(current_course)} ungraded #{term_for :assignments}"
 
   %br
 
