--- a/app/views/students/leaderboard.html.haml
+++ b/app/views/students/leaderboard.html.haml
@@ -1,16 +1,16 @@
 = content_nav_for "Leaderboard"
 
-%h3.pagetitle#tableCaption= @title
+%h3.pagetitle#tableCaption= presenter.title
 
 .pageContent
   = render 'layouts/alerts'
 
-  - if current_course.has_teams?
+  - if presenter.has_teams?
     .team-filter
       = form_tag leaderboard_path, :name => "see_team", :onchange => ("javascript: document.see_team.submit();"), :method => :get do
         %label
           .sr-only Select #{term_for :team}
-        = select_tag :team_id, options_for_select(@teams.map { |t| [t.name, t.id] }, @team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
+        = select_tag :team_id, options_for_select(presenter.teams.map { |t| [t.name, t.id] }, presenter.team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
 
 
   %table.nofeatures_default_rank_dynatable
@@ -20,13 +20,13 @@
         %th{:scope => "col", "data-dynatable-sorts" => "rank"} Rank
         %th{:scope => "col"} First Name
         %th{:scope => "col"} Last Name
-        - if current_course.in_team_leaderboard? || current_course.character_names?
+        - if presenter.display_pseudonyms?
           %th Pseudonyms
         %th{:scope => "col", "data-dynatable-sorts" => "numericScore"} Score
-        - if current_course.has_teams?
-          %th{:scope => "col"} #{current_course.team_term}
+        - if presenter.has_teams?
+          %th{:scope => "col"} #{presenter.course.team_term}
         %th{:scope => "col"} Grade
-        - if current_course.has_badges?
+        - if presenter.has_badges?
           %th{:scope => "col", "data-dynatable-sorts" => "badgeCount", :style => "min-width: 150px"  } Badges Earned
           %th{:style => "display: none"} Badge Count
         %th{:scope => "col", "data-dynatable-no-sort" => "true", :style => "min-width: 120px" }
@@ -36,26 +36,26 @@
           %tr
             %td
               = div_for student do
-                = link_to flagged_user_icon(current_course, current_user, student.id), flag_user_path(student), method: :post, remote: true, class: "flagged-user-icon"
+                = link_to flagged_user_icon(presenter.course, current_user, student.id), flag_user_path(student), method: :post, remote: true, class: "flagged-user-icon"
             %td{"data-title" => "Rank"}= index + 1
             %td{"data-title" => "First Name"}= link_to student.first_name, student_path(student)
             %td{"data-title" => "Last Name"}= link_to student.last_name, student_path(student)
-            - if current_course.in_team_leaderboard? || current_course.character_names?
+            - if presenter.display_pseudonyms?
               %td{"data-title" => "Pseudonym"}= student.display_name
             %td{"data-title" => "Score"}= points student.cached_score_sql_alias
-            - if current_course.has_teams?
+            - if presenter.has_teams?
               - student_team = @teams_by_student_id[student.id]
               %td#team_for_course{"data-title" => "Team"}
                 = link_to student_team.try(:name), student_team if student_team
             %td{"data-title" => "Grade"}
               - unless @student_grade_schemes_by_id[student.id].nil?
                 = "#{@student_grade_schemes_by_id[student.id].name}"
-            - if current_course.has_badges?
+            - if presenter.has_badges?
               %td#earned_badges{"data-title" => "Badges"}
                 - if @earned_badges_by_student_id[student.id]
                   - @earned_badges_by_student_id[student.id].each do |badge|
                     %img{:src => badge.icon, :alt => badge.name, :width => "20", :title => badge.name}
-              %td{:style => "display: none"}= student.earned_badges_for_course(current_course).count
+              %td{:style => "display: none"}= student.earned_badges_for_course(presenter.course).count
             %td{"data-title" => "Options"}
               .right
                 %ul.button-bar
