--- a/app/views/assignments/individual/_table_body.html.haml
+++ b/app/views/assignments/individual/_table_body.html.haml
@@ -31,9 +31,15 @@
     %td
       %span
       - if grade.feedback_read?
-        %i.fa.fa-check
+        %a
+          %i.fa.fa-check
+        .display_on_hover.hover-style
+          This feedback has been <strong>viewed</strong> by the #{term_for :student}.
       - elsif grade.feedback_reviewed?
-        %i.fa.fa-eye
+        %a
+          %i.fa.fa-eye
+        .display_on_hover.hover-style
+          This feedback has been <strong>marked as read</strong> by the #{term_for :student}.
 
     - if presenter.assignment.release_necessary?
       %td= grade.status
