Adds API namespace to routes and controllers
    remove default orders criteria and levels
    standardize scope on "ordered" for these models
    API criterion index
    API badges intex
    use new api routes for rubric front end
    improves rubric service in Angular for rubric controllers

--- a/app/views/assignments/_rubric_preview.html.haml
+++ b/app/views/assignments/_rubric_preview.html.haml
@@ -19,7 +19,7 @@
               .criterion-name= criterion.wrapped_name(28).html_safe
               .criterion-points= "#{points criterion.max_points} Points"
             .criterion-description= criterion.wrapped_description(40).html_safe
-          - criterion.levels.sorted.each do |level|
+          - criterion.levels.ordered.each do |level|
             %td.level.level-level
               .level-heading
                 .level-name= level.wrapped_name(25).html_safe
