--- a/app/views/assignments/show.html.haml
+++ b/app/views/assignments/show.html.haml
@@ -1,4 +1,4 @@
 - if current_user_is_staff?
-  = render partial: "view_assignment_management", locals: { presenter: presenter }
+  = render partial: "show_instructor", locals: { presenter: presenter }
 - else
-  = render partial: "view_assignment_grades", locals: { presenter: presenter }
+  = render partial: "show_student", locals: { presenter: presenter }
