Switch back to GradeCraft, remove empty view

--- a/app/views/exports_mailer/submissions_export_failure.html.haml
+++ b/app/views/exports_mailer/submissions_export_failure.html.haml
@@ -11,5 +11,5 @@
   %a{:href => "mailto: #{ ExportsMailer::ADMIN_EMAIL }"} #{ExportsMailer::ADMIN_EMAIL}
   if you'd like.
 %p Sincerely,
-%p The GradeCraft Team
+%p GradeCraft
 %hr/
