--- a/app/views/exports_mailer/submissions_export_started.text.haml
+++ b/app/views/exports_mailer/submissions_export_started.text.haml
@@ -5,4 +5,4 @@ Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.n
 You'll be notified when your ZIP archive is ready to download.
 
 Sincerely,
-The GradeCraft Team
+GradeCraft
