--- a/app/views/exports_mailer/team_submissions_export_failure.text.haml
+++ b/app/views/exports_mailer/team_submissions_export_failure.text.haml
@@ -5,4 +5,4 @@ Your requested submissions export of #{ @course.assignment_term.downcase} "#{ @a
 Our system administrators have been notified of the problem, but you may send an additional email to #{ExportsMailer::ADMIN_EMAIL} if you'd like.
 
 Sincerely,
-The GradeCraft Team
+GradeCraft
