--- a/app/views/exports_mailer/team_submissions_export_started.text.haml
+++ b/app/views/exports_mailer/team_submissions_export_started.text.haml
@@ -5,4 +5,4 @@ Your requested submissions export of #{ @course.assignment_term.downcase} "#{ @a
 You'll be notified when your ZIP archive is ready to download.
 
 Sincerely,
-The GradeCraft Team
+GradeCraft
