--- a/app/views/notification_mailer/group_created.text.haml
+++ b/app/views/notification_mailer/group_created.text.haml
@@ -5,4 +5,4 @@ You have a new group to review in course #{ @course.name }!
 You can learn more about it at https://www.gradecraft.com.
 
 Sincerely,
-The GradeCraft Team
+GradeCraft
