--- a/app/views/notification_mailer/revised_submission.text.haml
+++ b/app/views/notification_mailer/revised_submission.text.haml
@@ -1,7 +1,7 @@
 Hi Professor #{ @professor.last_name },
 
-#{ @student.first_name } #{ @student.last_name } has revised their #{ @course.assignment_term.downcase } "#{ @assignment.name }" for course #{ @course.name }. 
+#{ @student.first_name } #{ @student.last_name } has revised their #{ @course.assignment_term.downcase } "#{ @assignment.name }" for course #{ @course.name }.
 
 Please visit https://www.gradecraft.com to view the revised submission.
 
-The GradeCraft Team
+GradeCraft
