--- a/app/views/exports_mailer/submissions_export_failure.text.haml
+++ b/app/views/exports_mailer/submissions_export_failure.text.haml
@@ -5,4 +5,4 @@ Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.n
 Our system administrators have been notified of the problem, but you may send an additional email to #{ExportsMailer::ADMIN_EMAIL} if you'd like.
 
 Sincerely,
-The GradeCraft Team
+GradeCraft
