--- a/app/views/exports_mailer/team_submissions_export_success.text.haml
+++ b/app/views/exports_mailer/team_submissions_export_success.text.haml
@@ -7,4 +7,4 @@ You can download your completed ZIP archive here: #{ @submissions_export.presign
 Alternatively you can download the submissions archive on the submissions downloads page here: #{ exports_url }.
 
 Sincerely,
-The GradeCraft Team
+GradeCraft
