--- a/app/views/notification_mailer/grade_released.text.haml
+++ b/app/views/notification_mailer/grade_released.text.haml
@@ -1,9 +1,9 @@
 Dear #{ @student.first_name },
 
-You can now view the grade for your #{ @course.assignment_term.downcase } "#{ @assignment.name }" in course #{ @course.name }. 
+You can now view the grade for your #{ @course.assignment_term.downcase } "#{ @assignment.name }" in course #{ @course.name }.
 
 Don't forget to update your plan for the semester by checking your grade predictor here: https://www.gradecraft.com/predictor
 
 Play on!
 
-The GradeCraft Team
+GradeCraft
