--- a/app/views/notification_mailer/group_notify.text.haml
+++ b/app/views/notification_mailer/group_notify.text.haml
@@ -1,7 +1,7 @@
 Dear #{ @student.first_name },
 
-You've been added as a member of the #{ @group.name } Group in course #{ @course.name }. Let your instructor know if this is incorrect. 
+You've been added as a member of the #{ @group.name } Group in course #{ @course.name }. Let your instructor know if this is incorrect.
 
 Play on!
 
-The GradeCraft Team
+GradeCraft
