--- a/app/views/notification_mailer/group_status_updated.text.haml
+++ b/app/views/notification_mailer/group_status_updated.text.haml
@@ -2,7 +2,7 @@
 
 Your group, "#{ @group.name }" has been #{ @group.approved } in course #{ @course.name }.
 
-Log in to https://www.gradecraft.com to read your feedback. 
+Log in to https://www.gradecraft.com to read your feedback.
 
 Play on!
-The GradeCraft Team
+GradeCraft
