Stylesheet changes to display the submission file appropriately

--- a/app/assets/stylesheets/_history_timeline.sass
+++ b/app/assets/stylesheets/_history_timeline.sass
@@ -98,7 +98,7 @@ $color-timeline-vertical-line: $color-blue-5
   &.timeline-grade
     background: $color-timeline-grade
 
-  &.timeline-submission
+  &.timeline-submission, &.timeline-attachment
     background: $color-timeline-submission
 
 @media only screen and (min-width: $media-medium-max)
