--- a/app/assets/stylesheets/_icons.sass
+++ b/app/assets/stylesheets/_icons.sass
@@ -12,6 +12,11 @@ i.fa-slack
 i.fa-group, i.fa-key, i.fa-lock, i.fa-group, i.fa-exclamation-circle
   clear: both
 
+i.icon-attachment
+  /* Same as fa-paperclip */
+  &::before
+    content: "\f0c6"
+
 i.icon-grade
   /* Same as fa-check */
   &::before
