Cleaning up features page

--- a/app/assets/stylesheets/_features.sass
+++ b/app/assets/stylesheets/_features.sass
@@ -68,12 +68,12 @@
       background-color: lighten($color-blue-4, 20%)
 
     .text
-      padding-top: 2%
+      padding-top: 5%
       line-height: 2.5rem
-      font-size: 1.5rem
+      font-size: 1.6rem
 
     h2
-      font-size: 1.8rem
+      font-size: 2rem
       color: $color-blue-3
       font-weight: lighter
       margin-bottom: 1rem
@@ -87,8 +87,8 @@
       text-align: left
 
     .half
-      width: calc(50% - 1rem)
-      margin: 0 .5rem 0 .5rem !important
+      width: calc(50% - 6rem)
+      margin: 0 3rem 0 3rem !important
       position: relative
 
     .whole
