--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -302,6 +302,13 @@ ul.subnav.logged-out
   display: block
 
 /* Mobile Styles */
+@media (max-width: $media-medium-max)
+  .mobile-nav
+    margin: 0 auto
+    text-align: center
+  .nav.nav-pill
+    padding: 0
+    margin: .75rem
 
 @media (max-width: $media-small-max)
   .layout-left-flyout
