--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -38,3 +38,7 @@ $media-xlarge-max:  120rems
 @media (max-width: $media-medium-max)
   .hide-for-medium
     display: none
+
+@media (min-width: $media-medium-max)
+  .hide-for-large
+    display: none
