--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -12,7 +12,7 @@
       - if current_user.present?
         %a.btn-navbar-left.btn-navbar-navtoggle.btn-flyout-left-trigger
           %i.fa.fa-dashboard.fa-fw
-      %nav.the-nav.nav-collapse.hide-for-small.clearfix{:role => "navigation"}
+      %nav.the-nav.nav-collapse.hide-for-small.hide-for-medium.clearfix{:role => "navigation"}
         %ul.nav.nav-pill.left
           %li.course-site
             - if current_course
@@ -32,12 +32,15 @@
             = render 'layouts/navigation/overview_nav'
             = render 'layouts/navigation/login_nav'
       - if ! current_user
-        %nav.mobile-nav.hidden-med-and-up
-          %ul.nav.nav-pill.left
+        %nav.mobile-nav.hide-for-large
+          %ul.nav.nav-pill
             %a.no-hover.site-title{:href => root_url }
               = image_tag "GradeCraft_Logo_Mark_RGB.png", :width => "28"
-            = render 'layouts/navigation/overview_nav'
-
+            %li.dropdown
+              %a Login
+              %i.fa.fa-caret-down
+              %ul.subnav
+                = render 'layouts/navigation/login_nav'
       - if current_user.present?
         %a.btn-navbar-right.btn-navbar-navtoggle.btn-flyout-right-trigger
           %i.fa.fa-user.fa-fw
