Decreased size of icons, made copyright text less prominent

--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -11,5 +11,5 @@
     %li= link_to_unless_current "Team", our_team_path
     %li= link_to "Blog", "http://blog.gradecraft.com", :target => "_blank"
   %br
-  .uppercase.small= "© 2012-#{Date.today.year} Regents of the University of Michigan"
+  .uppercase.small.michigan= "© 2012-#{Date.today.year} Regents of the University of Michigan"
 .clear
