--- a/app/assets/stylesheets/_footer.sass
+++ b/app/assets/stylesheets/_footer.sass
@@ -23,12 +23,15 @@
       margin-right: 1rem
       a
         color: $color-grey-5
-        
+
         &:hover
           color: $color-blue-4
 
     &.social
-      font-size: 1.75rem
+      font-size: 1.25rem
+
+  .michigan
+    color: $color-grey-4
 
 .logged-in .footer
   padding: 1rem 2rem
