Increasing height of top bar

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -134,7 +134,7 @@
   position: fixed
   top: 0 !important
   z-index: 1000
-  height: 40px !important
+  height: 50px !important
   background-color: $color-blue-1
 
 @media (max-width: $media-small-max)
@@ -273,14 +273,15 @@ ul.subnav.logged-out
     text-transform: none !important
 
 .login-buttons
-  padding-top: .6rem
+  padding-top: 1rem
   padding-right: 1rem
-  padding-left: .25rem
+  padding-left: .5rem
   float: right
 
   .um-login
     background-image: image-url('UM.png')
     background-position: .5rem
+    margin-right: .5rem
     padding-left: 3.5rem !important
     background-repeat: no-repeat
     background-color: $color-blue-2
